<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".activitys.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/kein_fahrzeug"
            android:id="@+id/addVehicleFragmentLayoutTextView"
            android:layout_marginLeft="@dimen/content_vertical_margin"
            android:layout_marginRight="@dimen/content_vertical_margin"
            android:layout_marginTop="@dimen/content_vertical_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/kein_fahrzeug_fahrzeugname_und_ip"
            android:id="@+id/addVehicleFragmentLayoutVehicleTextViewNameAndVehicleUrl"
            android:layout_marginLeft="@dimen/content_vertical_margin"
            android:layout_marginRight="@dimen/content_vertical_margin"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_vertical_margin"
            android:layout_marginRight="@dimen/content_vertical_margin"
            android:layout_marginTop="@dimen/content_horizontal_margin"
            android:id="@+id/addVehicleFragmentLayoutEditTextVehicleName"
            android:hint="@string/kein_fahrzeug_fahrzeugname"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_vertical_margin"
            android:layout_marginRight="@dimen/content_vertical_margin"
            android:layout_marginTop="@dimen/content_horizontal_margin"
            android:id="@+id/addVehicleFragmentLayoutEditTextVehicleUrl"
            android:inputType="textUri"
            android:hint="@string/kein_fahrzeug_ip_adresse"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_vertical_margin"
            android:layout_marginRight="@dimen/content_vertical_margin"
            android:layout_marginTop="@dimen/content_horizontal_margin"
            android:id="@+id/addVehicleFragmentLayoutEditTextVehicleKey"
            android:hint="@string/kein_fahrzeug_key"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_horizontal_margin"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:text="@string/weitere_optionen_einblenden"
            android:clickable="true"
            android:id="@+id/addVehicleFragmentLayoutTextViewWeitereOptionen"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/content_horizontal_margin"
            android:paddingRight="@dimen/content_horizontal_margin"
            android:layout_marginTop="@dimen/content_vertical_margin"
            android:visibility="gone"
            android:id="@+id/addVehicleFragmentLayoutRelativeLayoutSpeedController">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/addVehicleFragmentLayoutEditTextSpeedControllerValue"
                android:layout_toStartOf="@+id/addVehicleFragmentLayoutEditTextSpeedControllerValue"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/anzahl_geschwindigkeits_reglerwerte"
                android:id="@+id/addVehicleFragmentLayoutTextViewSpeedController" />

            <EditText
                android:layout_width="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="number"
                android:lines="1"
                android:text="25"
                android:layout_height="wrap_content"
                android:id="@+id/addVehicleFragmentLayoutEditTextSpeedControllerValue"
                android:layout_alignBaseline="@+id/addVehicleFragmentLayoutTextViewSpeedController" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_vertical_margin"
                android:layout_toLeftOf="@+id/addVehicleFragmentLayoutCheckBoxSpeedControllerInvert"
                android:layout_toStartOf="@+id/addVehicleFragmentLayoutCheckBoxSpeedControllerInvert"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/addVehicleFragmentLayoutTextViewSpeedController"
                android:text="@string/geschwindigkeitsregler_invertieren"
                android:id="@+id/addVehicleFragmentLayoutTextViewSpeedControllerInvert" />

            <CheckBox
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addVehicleFragmentLayoutCheckBoxSpeedControllerInvert"
                android:layout_alignBaseline="@+id/addVehicleFragmentLayoutTextViewSpeedControllerInvert" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/content_horizontal_margin"
            android:paddingRight="@dimen/content_horizontal_margin"
            android:layout_marginTop="@dimen/content_vertical_margin"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/addVehicleFragmentLayoutRelativeLayoutSteeringController">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/addVehicleFragmentLayoutEditTextSteeringControllerValue"
                android:layout_toStartOf="@+id/addVehicleFragmentLayoutEditTextSteeringControllerValue"
                android:text="@string/anzahl_lenkungs_reglerwerte"
                android:id="@+id/addVehicleFragmentLayoutTextViewSteeringController"/>

            <EditText
                android:layout_width="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:inputType="number"
                android:lines="1"
                android:text="25"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/addVehicleFragmentLayoutTextViewSteeringController"
                android:id="@+id/addVehicleFragmentLayoutEditTextSteeringControllerValue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_vertical_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/addVehicleFragmentLayoutCheckBoxSteeringControllerInvert"
                android:layout_toStartOf="@+id/addVehicleFragmentLayoutCheckBoxSteeringControllerInvert"
                android:layout_below="@+id/addVehicleFragmentLayoutTextViewSteeringController"
                android:text="@string/lenkungsreglerwerte_invertieren"
                android:id="@+id/addVehicleFragmentLayoutTextViewSteeringControllerInvert"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/addVehicleFragmentLayoutTextViewSteeringControllerInvert"
                android:id="@+id/addVehicleFragmentLayoutCheckBoxSteeringControllerInvert"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_horizontal_margin"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:text="@string/weniger_optionen_anzeigen"
            android:visibility="gone"
            android:id="@+id/addVehicleFragmentLayoutTextViewWenigerOptionen"
            android:clickable="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addVehicleFragmentLayoutButtonInsertVehicle"
            android:layout_marginLeft="@dimen/content_horizontal_margin"
            android:layout_marginRight="@dimen/content_horizontal_margin"
            android:layout_marginTop="@dimen/content_vertical_margin"
            android:text="@string/kein_fahrzeug_eintragen"/>
    </LinearLayout>
</ScrollView>